update header and paragraph content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html><body>
 <script type="text/javascript" src="main.js"></script>
-<p>My website!</p>
+<h1>My website!</h1>
+<p>Now with new content!</p>
 </body></html>
